# merchants-guide

./: Cargo.toml  Makefile  README.md
etc/: developer.Dockerfile
src/: lib.rs  main.rs
tests/: stateless-journey.sh
tests/snapshots/: failure-input-file-not-found  failure-missing-input-file  success-input-file-produces-correct-output  success-input-without-any-query-dumps-state
