[package]
name = "galactic-merchants-guide"
version = "1.0.0"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]

[dependencies]
failure = "0.1.1"
regex = "1.0.0"
lazy_static = "1.0.0"

[[bin]]
name="guide"
path="src/main.rs"

[profile.release]
panic = 'unwind'
incremental = false
overflow-checks = true
